--- a/_posts/2013/2013-09-12-glue.md
+++ b/_posts/2013/2013-09-12-glue.md
@@ -3,21 +3,28 @@ title: Make Your Own Glue
 layout: post
 ---
 
-I think *single page web apps* should just be called *web apps*. It's an application for the web, a web site that eschewes the traditional model of  pages, and instead uses JavaScript to shuffle content. In other words, it's redundant. Of course, you might not want to listen to a post that veers off topic in its first paragraph.
+The primary question when making a web app, both chronologically and by importance, is often the choice of a JavaScript framework. These frameworks provide abstractions for common patterns like models, views, two-way bindings and persistence, and lets you focus on actually building your specific app.
 
-Creating a web app is not easy. There are many ways to make such an app, and a persistent choir of opinionated voices along each way. The first question, both chronologically and by importance, is often which JavaScript framework to choose. As the frontend world moves a mile a minute, there are many groundbreaking frameworks to choose from. These frameworks often provide abstractions for common patterns like models, views, two-way bindings and persistence, and lets you focus on actually building your specific app. They provide both the parts you need to build a web app, and the *glue* that binds these parts together. The glue is why they are frameworks, not libraries (they'll call you, you don't call them).
+A framework provides two types of things: the parts you need to build a web app, and the *glue* that binds these parts together. The glue is why they are frameworks, not libraries (they'll call you, you don't call them).
 
-However, before even deciding on a potential framework, you might ask if you need a framework at all, or if you can use a collection of libraries and provide your own glue. In many cases this will be a ridiculous question, but in some cases, it might make for a better end product. Consider the following.
+However, before even deciding on a potential framework, you should ask if you need a framework at all, or if you can use a collection of libraries and provide your own glue. In many cases this will be a ridiculous question, but in some cases, it might make for a better end product. Consider the following.
 
 <figure class="not-min">
     <object data="/images/glue.svg" type="image/svg+xml"></object>
 </figure>
 
-The glue is where the magic happens. While one might equate the glue of an app to boilerplate code, the glue is also where control flows from one part of your app to the next. This is where a typical framework would magically call your code, internal code, and other libraries, performing the tasks that together makes your app work. While magic can be powerful, it can also, as the name implies, be an unknown factor. It might be uncontrollable, internal to the framework, something you might not be able to change without exploratory framework surgery. Even then, if you know the internal code inside out, there might not be enough hooks for you to perform the neccessary changes.
+The glue is where the magic happens. While many equate the glue of an app to boilerplate code, the glue is also where control flows from one part of your app to the next. This is where a typical framework would magically call your code, internal code, and other libraries, performing the tasks that together makes your app do what it should.
 
-The alternative is to make your own glue. There are many great libraries out there, popularly called *micro JS* libraries, that each do one thing well. You have event emitters, DOM manipulators, URL handlers and persistence managers, which, while they might not fit together without a little glue, perform their tasks without relying on a monolithic, unchangeable, magic framework.
+While magic can be powerful, it can also, as the name implies, be an unknown factor. It can be uncontrollable, internal to the framework, something you might not be able to change without exploratory framework surgery. Even then, if you know the internal code inside out, there will never be enough hooks for you to perform all necessary changes.
 
-By making your own glue, and using a collection of small libraries, you get a very flexible setup. Each part can be rewritten or swapped as new requirements arise. The app will then consist of a number of these small third party libraries, a few of your own libraries (that are independent of this specific app), your core app logic (which can also be written as small libraries), and your own glue that ties all this together. The glue consists of adapters to each of these libraries, and the central code that orchestrates the flow from one module to the next.
+The alternative is to make your own glue. There are many great libraries out there, popularly called *micro JS* libraries, that each do one thing well. You have event emitters, DOM manipulators, URL handlers and persistence managers, which, while they won't fit together without a little glue, perform their tasks without relying on a monolithic, unchangeable, magic framework.
+
+By making your own glue, and using a collection of small libraries, you get a very flexible setup. Each part can be rewritten or swapped as new requirements arise. The app will then consist of a number of these small third party libraries, a few of your own libraries (that are independent of this specific app), your core app logic (which can also be written as small libraries), and your own glue that ties all this together. The glue consists of adapters to each of these libraries, and a small bit of control code that orchestrates the flow of the app.
+
+I've been building a web app this way for a while now, exclusively from micro libraries and custom glue. The resulting app is very flexible, where each part serves a specific purpose, and each part can potentially be replaced if need be. The most prominent downside seems to be that each new developer needs to learn the custom glue. If we used an existing popular framework, there would be lots of documentation and tutorials readily available, all applicable to our app.
+
+There's also a fine line between productively writing custom components and continuously reinventing the wheel. While avoiding a framework because it's *not invented here* is a bad thing, avoiding a framework because it *could not be invented here*, due to its own complexity, could be a good idea.
 
 There are always trade-offs while making such choices, and the answer always depends on the project in question. While using a framework probably is a good thing, and a great multiplier when it comes to productivity, using a framework also means making a choice that might not be easily reversible.
 Making your own glue is then (yet another) possible way to create a web app.
+
